kubernetes/spectrumknx-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spectrumknx
spec:
  serviceName: spectrumknx
  replicas: 1
  selector:
    matchLabels:
      app: spectrumknx
  template:
    metadata:
      labels:
        app: spectrumknx
    spec:
      containers:
        - name: spectrumknx
          image: "ghcr.io/martinhoefling/spectrumknx:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8765
              name: http
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8765
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8765
            initialDelaySeconds: 10
            periodSeconds: 5

          volumeMounts:
            - name: knxproj
              mountPath: "/knxproj"
      volumes:
        - name: knxproj
          persistentVolumeClaim:
            claimName: spectrumknx-knxproj
