kubernetes/timescaledb-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spectrumknx-timescaledb
spec:
  serviceName: spectrumknx-timescaledb
  replicas: 1
  selector:
    matchLabels:
      app: spectrumknx-timescaledb
  template:
    metadata:
      labels:
        app: spectrumknx-timescaledb
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: timescaledb
          image: timescale/timescaledb:latest-pg16
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: timescale-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: timescale-data
          persistentVolumeClaim:
            claimName: spectrumknx-timescale
