kubernetes/spectrumknx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spectrumknx
  labels:
    app: spectrumknx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8765
      protocol: TCP
      name: http
  selector:
    app: spectrumknx
