kubernetes/timescaledb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spectrumknx-timescaledb
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app: spectrumknx-timescaledb
